[gd_scene load_steps=5 format=1]

[ext_resource path="res://gui_node/inventory_system.gd" type="Script" id=1]
[ext_resource path="res://node_scipts/ItemData.scn" type="PackedScene" id=2]
[ext_resource path="res://gui_node/item_slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui_node/item_picking.tscn" type="PackedScene" id=4]

[node name="inventory_system" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="ItemData" parent="." instance=ExtResource( 2 )]

[node name="slot_list" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="item_slot" parent="slot_list" instance=ExtResource( 3 )]

margin/right = 44.0
margin/bottom = 38.0
slot_id = 0
item_id = 0

[node name="item_slot1" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 50.0
margin/right = 94.0
margin/bottom = 38.0
slot_id = 1
item_id = 0

[node name="item_slot2" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 100.0
margin/right = 144.0
margin/bottom = 38.0
slot_id = 2
item_id = 0

[node name="item_slot3" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 150.0
margin/right = 194.0
margin/bottom = 38.0
slot_id = 3
item_id = 0

[node name="item_slot4" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 200.0
margin/right = 244.0
margin/bottom = 38.0
slot_id = 4
item_id = 0

[node name="item_slot5" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 250.0
margin/right = 294.0
margin/bottom = 38.0
slot_id = 5
item_id = 0

[node name="item_slot6" parent="slot_list" instance=ExtResource( 3 )]

margin/left = 300.0
margin/right = 344.0
margin/bottom = 38.0
slot_id = 6
item_id = 0

[node name="item_picking" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false


